--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.yusufsezer</groupId>
+    <groupId>com.dakole</groupId>
     <artifactId>java-jsp-diary</artifactId>
     <version>0.0.1</version>
     <packaging>war</packaging>
@@ -50,6 +50,9 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+	<sonar.host.url>http://54.221.74.148:9000/</sonar.host.url>
+	<sonar.id>admin</sonar.id>
+	<sonar.password>admin</sonar.password>
     </properties>
 
 </project>
