--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <version>8.0.18</version>
         </dependency>
     </dependencies>
+    <distributionManagement>
+     	<repository>
+            <id>nexus</id>
+            <name>JSP-diary Repository</name>
+            <url>http://44.203.208.101:8081/repository/JSP-diary-release/</url>
+        </repository>
+    </distributionManagement>
 	
     <build>
         <finalName>java-jsp-diary</finalName>
